--- a/assignment_2.html
+++ b/assignment_2.html
@@ -19,11 +19,7 @@ let snp_data = [{"Date":"2/16/24","Close":5005.57},{"Date":"2/15/24","Close":502
 
 // Put your javascript code in here
 
-console.log('Print your result in here');
-
-//Example print out
-let example_variable = 20;
-console.log(`Total change: ${example_variable}`); //prints Total Cnage: 20
+console.log('Print your array in here');
 
 
 </script>
