--- a/assignment_2.html
+++ b/assignment_2.html
@@ -2,24 +2,34 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Class 3 Javascript HW</title>
+<title>Class 3 Javascript #2</title>
 </head>
 <body>
 
 
-<p>Get the total change for the S&P 500 in the past two weeks.</p>
+<p>Split this array up based on the data type.</p>
 
-<p>Write a loop that goes through the array and calculates a sum of the change.</p>
+<p>Sort the number and string arrays</p>
+<ul>
+    <li>Numbers by lowest to highest</li>
+    <li>Strings by alphabetical order</li>
+</ul>
 
-<p>Should print out in the console as <code>Total Change: X</code></p>
+<p>You’ll want to use the the <code>reverse()/sort()</code> or the <code>toSorted()/toReversed()</code> functions in javascript for the second part.</p>
 
 <script>
 
-let snp_data = [{"Date":"2/16/24","Close":5005.57},{"Date":"2/15/24","Close":5029.73},{"Date":"2/14/24","Close":5000.62},{"Date":"2/13/24","Close":4953.17},{"Date":"2/12/24","Close":5021.84},{"Date":"2/9/24","Close":5026.61},{"Date":"2/8/24","Close":4997.91},{"Date":"2/7/24","Close":4995.06},{"Date":"2/6/24","Close":4954.23},{"Date":"2/5/24","Close":4942.81}];
+let array = ["apple", true, 5, false, "banana", "orange", 15, "grape", true, 20, "kiwi", "pineapple", false, 25, "watermelon", true, 30, "cherry", false, "lemon"];
 
-// Put your javascript code in here
+let strings = [];
+let numbers = [];
+let booleans = [];
+  
+// code here
 
-console.log('Print your array in here');
+
+// where it should print 
+console.log(strings,numbers,booleans);
 
 
 </script>
