--- a/assignment_1.html
+++ b/assignment_1.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Class 3 Javascript HW</title>
+<title>Class 3 Javascript #1</title>
 </head>
 <body>
 
